plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dep.management)
}

group = 'dev.agasen.core'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':src:backend:platform:common')
    implementation project(':src:backend:platform:api')

    implementation libs.spring.starter.web
    implementation libs.spring.starter.security
    implementation libs.spring.starter.oauth2.resource.server
    implementation libs.spring.starter.validation
    implementation libs.spring.starter.actuator
    implementation libs.bundles.observability
    implementation libs.bundles.persistence
    implementation libs.spring.starter.kafka
    implementation libs.springdoc.webmvc

    compileOnly libs.lombok
    annotationProcessor libs.lombok
    testCompileOnly libs.lombok
    testAnnotationProcessor libs.lombok

    developmentOnly libs.spring.devtools

    testImplementation libs.spring.starter.test
    testImplementation libs.spring.security.test
    testImplementation libs.spring.kafka.test
    testImplementation libs.h2
    testRuntimeOnly libs.junit.launcher
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
    options.release = 26
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

tasks.named('integrationTest') {
    jvmArgs(['--enable-preview'])
}

tasks.named('bootRun') {
    jvmArgs(['--enable-preview'])
}

bootJar {
    archiveFileName = "app.jar"
}

jar {
    enabled = false
}
